# evolution_of_conventions

./: CHANGES.md  CITATION  README.md  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
paper/: refs.bib  task_paper.py  young_1993.tex  young_1993_pres.tex
src/young_1993/: __init__.py  task_parameters.py
src/young_1993/analysis/: task_analysis.py
src/young_1993/data_management/: __init__.py  task_data_management.py
src/young_1993/dynamics/: graph.py  markov_chain.py  task_dynamics.py
src/young_1993/final/: __init__.py  plot.py  task_final.py
src/young_1993/game/: game.py  task_game.py
tests/analysis/: test_model.py  test_predict.py
tests/data_management/: test_clean_data.py
