[metadata]
name = young_1993
description = The Evolution of Conventions: A Computational Adaptation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ecdogaroglu/young_1993
author = Ege Can Dogaroglu
author_email = ecdogaroglu@gmail.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/ecdogaroglu/young_1993
    Documentation = https://github.com/ecdogaroglu/young_1993
    Github = https://github.com/ecdogaroglu/young_1993
    Tracker = https://github.com/ecdogaroglu/young_1993/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/young_1993/_version.py
